# bookmarkr

./: README.md
.github/workflows/: ci-backend.yml  codeql.yml
backend/: Bookmarkr.Backend.sln  pyproject.toml
backend/Bookmarkr.Backend/: BookmarkrFunctions.cs
backend/Bookmarkr.Backend/Bookmarks/Create/: BookmarkCreateRequest.cs  BookmarkCreateResponse.cs
backend/Bookmarkr.Backend/Bookmarks/Update/: BookmarkUpdateRequest.cs  BookmarkUpdateResponse.cs
backend/Bookmarkr.Backend/Database/: BookmarkInMemoryDb.cs
backend/Bookmarkr.Backend/Models/: Bookmark.cs
backend/Bookmarkr.Backend/Properties/: launchSettings.json
backend/Bookmarkr.Tests/: Bookmarkr.Tests.csproj  TestBookmarks.cs
backend/bookmarks/: models.py  urls.py
backend/bookmarks/api/: serializers.py  views.py
backend/bookmarks/api/tests/: test_create.py  test_delete.py  test_read.py  test_update.py
backend/bookmarks/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
