[project]
name = "bookmarkr-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.1",
    "djangorestframework==3.16.0",
]

[tool.uv]
dev-dependencies = [
    "black==25.1.0",
    "flake8==7.2.0",
    "isort==6.0.1",
    "pytest-cov==6.1.1",
    "pytest-django==4.11.1",
    "pytest-xdist==3.6.1",
    "pytest==8.3.5",
]
